human-intervention-logs/org.apache.calcite:calcite-core:1.35.0/gradle-test/gradle-test-2026-05-06T14-28-16-174191Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.calcite:calcite-core:1.35.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 6 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/tests/src/org.apache.calcite/calcite-core/1.35.0/src/test/java/org_apache_calcite/calcite_core/ProxyingMetadataHandlerProviderTest.java:79: error: incompatible types: invalid functional descriptor for lambda expression
        return new RelMetadataQuery(handlerClass -> null);
                                    ^
    method (Class<MH>)MH in interface MetadataHandlerProvider is generic
  where MH is a type-variable:
    MH extends MetadataHandler<?> declared in method <MH>handler(Class<MH>)
Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/tests/src/org.apache.calcite/calcite-core/1.35.0/src/test/java/org_apache_calcite/calcite_core/ProxyingMetadataHandlerProviderTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/tests/src/org.apache.calcite/calcite-core/1.35.0/src/test/java/org_apache_calcite/calcite_core/ProxyingMetadataHandlerProviderTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/tests/src/org.apache.calcite/calcite-core/1.35.0/src/test/java/org_apache_calcite/calcite_core/ProxyingMetadataHandlerProviderTest.java:79: error: incompatible types: invalid functional descriptor for lambda expression

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/tests/src/org.apache.calcite/calcite-core/1.35.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date
          return new RelMetadataQuery(handlerClass -> null);
                                      ^
      method (Class<MH>)MH in interface MetadataHandlerProvider is generic
    where MH is a type-variable:
      MH extends MetadataHandler<?> declared in method <MH>handler(Class<MH>)
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 13s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/446-e5d0e03a/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.calcite:calcite-core:1.35.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 16s
9 actionable tasks: 1 executed, 8 up-to-date
